[gd_scene load_steps=4 format=3 uid="uid://do6l4aiv0mh5i"]

[ext_resource type="Script" path="res://scripts/attack.gd" id="1_kmn3n"]
[ext_resource type="Texture2D" uid="uid://dls7hodhx72bg" path="res://assets/tipo_attack1.png" id="2_3sqx3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gu75h"]
size = Vector2(27, 28)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_kmn3n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_gu75h")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, -2.38419e-07)
scale = Vector2(0.021663, 0.02511)
texture = ExtResource("2_3sqx3")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -4.76836e-07)
scale = Vector2(0.027326, 0.0322201)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="hit_enemy" from="." to="." method="_on_hit_enemy"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
